# lightning_talk_uv

./: README.md  script.md
demo_sources/: pyproject_build.toml  script.py
demo_sources/src/uv_demo/: main.py
uv-demo/: pyproject.toml
